Fix select input screen broken for selection members when alignment is hidden from members

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1036,6 +1036,10 @@ i {
 }
 
 // TOOLTIPS AND POPOVERS
+.popover,
+.tooltip {
+    padding: 8px; // Offset from target
+}
 .popover {
     z-index: 99999999;
     .popover-inner {
